trial not official

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <meta property="og:image" content="/og-preview.png" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <h1>Let's Scribble</h1>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
